2000-10-27  OKUJI Yoshinori  <okuji@gnu.org>

	* lib/device.c (read_device_map): Don't parse a line, if it is
	empty. Reported by Holger Bauer <bauer@itsm.uni-stuttgart.de>.
	
2000-10-25  Jochen Hoenicke  <jochen@gnu.org>

	* stage2/builtins.c (md5crypt_func): Use all bits of currticks ()
	to generate the salt.  The old code would often produce the same
	one character salt.

2000-10-25  OKUJI Yoshinori  <okuji@gnu.org>

	* stage2/apm.S (get_apm_info): Fix a serious typo: prot_to_real
	-> real_to_prot. Umm, I can't understand why it worked for me!
	
2000-10-24  Jochen Hoenicke  <jochen@gnu.org>

	* stage2/builtins.c (setup_func): When invoking install with an
 	embedded stage1_5 give the path to menu.lst as real_config_file.

2000-10-23  OKUJI Yoshinori  <okuji@gnu.org>

	* docs/multiboot.texi: Upgraded to 0.6.92.
	(Boot information format): Re-designed the graphics table.
	
2000-10-22  OKUJI Yoshinori  <okuji@gnu.org>

	* docs/tutorial.texi: Miscellaneous updates.
	* docs/user-ref.texi: Likewise.
	* docs/appendices.texi: Likewise.
	
2000-10-22  OKUJI Yoshinori  <okuji@gnu.org>

	* util/grub-install.in (usage): Removed unnecessary commas.
	
	* util/grub-md5-crypt.in: New file.
	* util/Makefile.am (sbin_SCRIPTS): Added grub-md5-crypt.
	* configure.in (AC_OUTPUT): Added util/grub-md5-crypt.
	* docs/Makefile.am (man_MANS): Added grub-md5-crypt.8.
	[MAINTAINER_MODE] ($(srcdir)/grub-md5-crypt.8): New target.
	* docs/grub-md5-crypt.8: New file. Generated by help2man.

	* docs/grub.texi (grub-md5-crypt): New direntry.
	(Invoking grub-md5-crypt): New entry.
	* docs/user-ref.texi (Invoking grub-md5-crypt): New chapter.
	
2000-10-22  OKUJI Yoshinori  <okuji@gnu.org>

	From Matthias Granberry <matthias@slurpee.org>:
	* util/grub-install.in (convert): Added backslashes into
	continuous lines.
	
2000-10-21  OKUJI Yoshinori  <okuji@gnu.org>

	* stage2/md5.c (check_md5_password): Removed.
	(md5_password): New function. Mostly copied from
	check_md5_password.